adds validations and nested attributes for Question model

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+<h1>Create a new question!</h1>
+<h5>Check off the correct answer(s).</h5>
+<%= render "form", question: @question %>
