--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,9 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @question.title %></h1>
+<h2>Answers:</h2>
+  <ul>
+    <% @question.answers.each do |a| %>
+    <li><%= a.content %></li>
+    <% end %>
+  </ul>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
 <%= link_to 'Back', questions_path %>
