--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,3 @@
-<h1><%= @question.title %></h1>
-<h2>Answers:</h2>
-  <ul>
-    <% @question.answers.each do |a| %>
-    <li><%= a.content %></li>
-    <% end %>
-  </ul>
+<%= render partial: "shared/question", object: @question, full: true %>
 
 <%= link_to 'Back', questions_path %>
