--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
    <div class="container" style="padding-top: 10px;">
     <div class="row justify-content-center">
      <div class="col-8">
+          <%= render 'layouts/flash_messages' %>
           <%= yield %>
      </div>
     </div>
