--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link"  %>
       <%= link_to "Add Question", new_user_question_url(current_user), class: "nav-link"  %>
       <%= link_to "View My Questions", user_questions_url(current_user), class: "nav-link"  %>
+      <%= link_to "View My Answered Questions", user_answers_url(current_user), class: "nav-link"  %>
       <%= link_to "View All Questions", questions_url, class: "nav-link"  %>
     </div>
     <% end %>
