able to see questions answered

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,2 @@
 <h1><%= @title %></h1>
-<%= render partial: "shared/questions_list", object: @questions, full: true %>
+<%= render partial: "shared/questions_list", object: @questions, full: false %>
